package Game.Pokemons.Elements;

public interface Element
{

    public String getElmnt();

    public String getFortContre();

    public String getFaibleContre();


}
