@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam style strictuml

class Joueur
{
    - m_nom: String
    + <<Create>> Joueur(nom: String)
}

class EnsemblePokemon <<Interface>>
{
    + ajouterPokemon(index: Integer, pokemon:Pokemon)
    + getPokemon(int index):Pokemon
    + afficher()

}

class Defausse implements EnsemblePokemon
{
    - m_nom: String
    - m_morts : Arraylist<Pokemon>
    + <<Create>> Defausse(nom: String, capacite: int)
}

class MainDuJoueur implements EnsemblePokemon
{
    - m_mainJoueur: Pokemon[5]
    + <<Create>> MainDuJoueur()
    + ajouterPokemon(index:Integer,pokemon:Pokemon)
    + getPokemon(index:Integer): Pokemon
    + afficher()
}

class Terrain implements EnsemblePokemon
{
    - m_Terrain: Pokemon[3]
    + <<Create>> Pioche(joueur:Integer)
    + ajouterPokemon(index:Integer,pokemon:Pokemon)
    + getPokemon(index:Integer): Pokemon
    + afficher()
}

class Pioche implements EnsemblePokemon
{
    - m_mainJoueur: Pokemon[]
    + <<Create>> Pioche(joueur:Integer)
    + ajouterPokemon(index:Integer,pokemon:Pokemon)
    + getPokemon(index:Integer): Pokemon
    + afficher()
}


class Pokemon
{
    - m_nom: String
    - m_health : int
    - m_atk : int
    + <<Create>> Pokemon(nom: String)
    + Attaquer() : Void
    + getVie() : int
    + getM_attaque() : int
    + getNom() : String
    + toString() : String 
}

class Element <<Interface>>
{
    + getElmt() : String
    + getFortContre(): String
    + getFaibleContre() : String
}


class Terre implements Element
{
    + getElmt() : String
    + getFortContre(): String
    + getFaibleContre() : String
}

class Eau implements Element
{
    + getElmt() : String
    + getFortContre(): String
    + getFaibleContre() : String
}

class Feu implements Element
{
    + getElmt() : String
    + getFortContre(): String
    + getFaibleContre() : String
}

class Air implements Element
{
    + getElmt() : String
    + getFortContre(): String
    + getFaibleContre() : String
}

abstract Affichage
{
    + afficher() : String
}

Pioche "1" *---> "20..21\n-" Pokemon : composé de \t\t >
MainDuJoueur "1" *---> "5\n" Pokemon : composé de \t\t >
Terrain "1" *---> "3\n-" Pokemon : composé de \t\t >
Defausse "1" *---> "*\n-" Pokemon : composé de \t\t >

Pokemon "\n 1" *--> "1\n-m_elmt" Element : Possède\n\n >
Joueur "1" *---> "1\n-m_terrain" Terrain : composé de \t\t >
Joueur "1" *---> "1\n-m_pioche" Pioche : composé de \t\t >
Joueur "1" *---> "1\n-m_main" MainDuJoueur : composé de \t\t >
Joueur "1" *---> "1\n-m_defausse" Defausse : composé de \t\t >



@enduml
